--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-co zrozumiałeś z instrukcji?
+samochód, jabłko, książka, kwiatek, słońce, deszcz, lampa, rower, truskawka, motyl, kawa, ocean, pies, gwiazda, chmura, samolot, rower, latarnia, księżyc, gitara, kaktus, pingwin, dom, ryba, słonik, las, śnieg, foka, cegła, komputer, deska, kubek, drzewo, woda, kurtka, ksiądz, zamek, klucz, kwiaty, pizza, piłka, buty, telewizor, lizak, pilnik, torba, słuchawki, kabel, długopis, ekran
 ###
 aidevs
 ###################################################
